<resources>
    <string name="app_name">Basic Arch</string>

    <string name="login_title">Login</string>
    <string name="login_username">Username</string>
    <string name="login_username_error_empty">Username cannot be empty</string>
    <string name="login_username_error_invalid">Please enter the correct format Username</string>
    <string name="login_password">Password</string>
    <string name="login_password_error_empty">Password cannot be empty</string>
    <string name="login_password_error_length">Password must be at least 6 characters</string>
    <string name="login_login">Login</string>
    <string name="login_login_success">Login success</string>

    <string name="home_title">Home</string>
    <string name="home_github">@string/github_title</string>
    <string name="home_news">@string/news_title</string>
    <string name="home_login">@string/login_title</string>

    <string name="github_title">Github</string>
    <string name="github_keyword">Keyword</string>
    <string name="github_empty">Search empty</string>
    <string name="item_watch">Watch %d</string>
    <string name="item_star">Star %d</string>
    <string name="item_fork">Fork %d</string>
    <string name="item_retry">Retry</string>

    <string name="news_title">News</string>

    <string name="exoplayer_title">ExoPlayer</string>

    <string name="settings_mail">E-mail : %s</string>

    <string name="dialog_ok">ok</string>
    <string name="dialog_cancel">cancel</string>
    <string name="dialog_update">update</string>

    <string name="inputText_blank"/>

    <string name="media_url_mp3">https://storage.googleapis.com/exoplayer-test-media-0/Jazz_In_Paris.mp3</string>
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>


</resources>